[tool.poetry]
name = "czfrq"
version = "0.1.0"
description = "Generate anki deck from frequency word lists"
authors = ["Rinat Sabitov <rinat.sabitov@gmail.com>"]
packages = [
    { include = "main.py" },
]

[tool.poetry.scripts]
frq = 'main:main'

[tool.poetry.dependencies]
python = "^3.7|^3.8|^3.9|^3.10"
beautifulsoup4 = "4.8.0"
cachecontrol = "0.12.5"
lockfile = "0.12.2"
lxml = "^4.7.1"
genanki = { git = "https://github.com/kerrickstaley/genanki.git", branch = "master" }
msgpack = "0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
