[tool.poetry]
name = "frq"
version = "0.2.1"
description = "Generate anki deck from frequency word lists"
authors = ["Rinat Sabitov <rinat.sabitov@gmail.com>"]
packages = [
    { include = "main.py" },
]

[tool.poetry.scripts]
frq = 'main:main'

[tool.poetry.dependencies]
python = "^3.7|^3.8|^3.9|^3.10"
beautifulsoup4 = "4.8.0"
lockfile = "^0.12"
lxml = "^4.9.1"
genanki = { git = "https://github.com/kerrickstaley/genanki.git", branch = "master" }
msgpack = "0.6.2"
requests = "^2.27"
requests-cache = "^0.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
