[tool.poetry]
name = "frq"
version = "0.2.1"
description = "Generate anki deck from frequency word lists"
authors = ["Rinat Sabitov <rinat.sabitov@gmail.com>"]
packages = [
    { include = "main.py" },
]

[tool.poetry.scripts]
frq = 'main:main'

[tool.poetry.dependencies]
python = ">=3.8,<4"
beautifulsoup4 = "4.11"
lockfile = "^0.12"
lxml = "^4.9"
genanki = { git = "https://github.com/kerrickstaley/genanki.git", branch = "master" }
requests = "^2.28"
requests-cache = "^1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
